feat(items): Allow subtasks (child items)
